--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,7 @@ env:
 install:
 - cinst -y python
 script:
-  - pip
-  - pip install wheel
+  - python -m pip
 #- python -m nose tests -v tests.modules.jmeter.test_JMX:TestJMX.test_int_udv
 
 
