--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,10 @@ env:
 install:
 - cinst -y python
 script:
+  - ps: pip
+  - ps: pip3
+  - sh: pip
+  - sh: pip3
   - export PATH="$(powershell -Command '("Process", "Machine" | % {
     [Environment]::GetEnvironmentVariable("PATH", $_) -Split ";" -Replace "\\$", ""
     } | Select -Unique | % { cygpath $_ }) -Join ":"')"
