--- a/.travis.yml
+++ b/.travis.yml
@@ -24,17 +24,13 @@ env:
 
 install:
 - cinst -y python
+- export PATH="$(powershell -Command '("Process", "Machine" | % {
+  [Environment]::GetEnvironmentVariable("PATH", $_) -Split ";" -Replace "\\$", ""
+  } | Select -Unique | % { cygpath $_ }) -Join ":"')"
+- pip3 install nose
 script:
-  - ps: pip
-  - ps: pip3
-  - sh: pip
-  - sh: pip3
-  - pip3
-  - export PATH="$(powershell -Command '("Process", "Machine" | % {
-    [Environment]::GetEnvironmentVariable("PATH", $_) -Split ";" -Replace "\\$", ""
-    } | Select -Unique | % { cygpath $_ }) -Join ":"')"
-  - echo "new PATH=$PATH"
-  - pip3
+- python -m pip
+- python3 -m pip
 #- python -m nose tests -v tests.modules.jmeter.test_JMX:TestJMX.test_int_udv
 
 
