--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ install:
 - pip3 install -r requirements.txt
 - pip3 install -r tests/ci/requirements.txt
 script:
+- python -m pip list
 - python -m nose tests -v tests.modules.jmeter.test_JMX:TestJMX.test_int_udv
 
 
