--- a/.travis.yml
+++ b/.travis.yml
@@ -1,38 +1,102 @@
 sudo: false
-language: sh
+language: python
+dist: xenial
 cache: pip  # use caching for pip's packages to speed up builds
 
 branches:
   only:
   - master
 
-os: windows
+os: linux
 
 python:
+#- "3.5"
+#- "3.6"
 - "3.7"
 
 env:
   global:
-  - PIP_INSTALL="python -m pip install"
+  - DISPLAY=:99.0
+  - PIP_INSTALL="pip install"
+  - GENERAL_EXCLUDE="--exclude-dir=tests/resources --exclude-dir=tests/ci"
   - PYTHON=python
 
-#install:
-#- python -m pip install --upgrade pip
-#- python -m pip install "pyyaml<5.1"
-#- python -m pip install -r requirements.txt
-#- python -m pip install -r tests/ci/requirements.txt
+matrix:
+  include:
+#  - os: osx
+#    name: "Python3.7 on macOS"
+#    osx_image: xcode11    # Python 3.7.4 running on macOS 10.14.4
+#    language: shell
+#    env:
+#    - PYTHON=python3
+#    - PIP_INSTALL="sudo pip3 install"
+#    - RVM_KEY="409B6B1796C275462A1703113804BB82D39DC0E3"
+#    - OSX_EXCLUDE="--exclude-test=tests.modules.selenium.test_csharp"
+#    before_install:
+#    - gpg --keyserver hkp://keys.gnupg.net --recv-keys $RVM_KEY && rvm get stable || echo "rvm update fail"
+#    before_script:
+#      - sudo nohup bash -c "xvfb :99 &"
+#      - $PYTHON tests/resources/httpserver/start.py &
+#    script:
+#      - coverage run --source=. -m nose tests -v $GENERAL_EXCLUDE $OSX_EXCLUDE --with-timer --timer-top-n 30
+
+  - os: windows
+    name: "Python3.7 on Windows"
+    language: sh
+    env:
+      - PYTHON="C:/Python37/python.exe"
+      - PIP_INSTALL="C:/Python37/python.exe -m pip install"
+      - PATH=c/Python37:/c/Python37/Scripts:$PATH
+      - R_PATH=C:/Ruby22/bin
+      - PYTHON_VERSION="3.7.x"
+      - PYTHON_ARCH="64"
+#      - NODEJS_VERSION="10"
+    before_install:
+    - choco install python --version 3.7.6
+    - $PYTHON --version
+    - $PYTHON -m ensurepip
+    - $PIP_INSTALL --upgrade pip
+    - $PIP_INSTALL pip wheel --upgrade
+    - choco install nodejs.install
+#    install:
+#    - gem install rspec
+#    - $PIP_INSTALL pyyaml==3.13
+#    - $PIP_INSTALL -r requirements.txt
+#    - $PIP_INSTALL -r tests/ci/requirements.txt
+    before_script:
+    - ruby -v
+    - gem -v
+    - rspec --version
+    - nohup bash -c "$PYTHON tests/resources/httpserver/start.py ;"
+    script:
+    - $PYTHON -m nose --verbosity=3 tests.modules.jmeter.test_JMX:TestJMX.test_int_udv
+
+addons:
+  firefox: latest
+  chrome: stable
+  apt:
+    packages:
+    - openjdk-8-jdk
+    - mono-complete
+    - python3-tk
+
+before_install:
+- mono --version
 
 install:
-- cinst -y python
-- export PATH="$(powershell -Command '("Process", "Machine" | % {
-  [Environment]::GetEnvironmentVariable("PATH", $_) -Split ";" -Replace "\\$", ""
-  } | Select -Unique | % { cygpath $_ }) -Join ":"')"
-#- python -m pip install --upgrade pip
-- pip3 install "pyyaml<5.1"
-- pip3 install -r requirements.txt
-- pip3 install -r tests/ci/requirements.txt
+- gem install rspec
+- $PIP_INSTALL pyyaml==3.13
+- $PIP_INSTALL -r requirements.txt
+- $PIP_INSTALL -r tests/ci/requirements.txt
+
+#before_script:
+#- nohup bash -c "Xvfb :99 &"
+#- $PYTHON tests/resources/httpserver/start.py &
+
 script:
-- python -m pip list
-- python -m nose tests -v tests.modules.jmeter.test_JMX:TestJMX.test_int_udv
+- coverage run --source=. -m nose tests -v $GENERAL_EXCLUDE --with-timer --timer-top-n 30
+
+after_success:
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then coverage report -m && codecov; fi
 
 
