--- a/.travis.yml
+++ b/.travis.yml
@@ -23,23 +23,6 @@ env:
 
 matrix:
   include:
-#  - os: osx
-#    name: "Python3.7 on macOS"
-#    osx_image: xcode11    # Python 3.7.4 running on macOS 10.14.4
-#    language: shell
-#    env:
-#    - PYTHON=python3
-#    - PIP_INSTALL="sudo pip3 install"
-#    - RVM_KEY="409B6B1796C275462A1703113804BB82D39DC0E3"
-#    - OSX_EXCLUDE="--exclude-test=tests.modules.selenium.test_csharp"
-#    before_install:
-#    - gpg --keyserver hkp://keys.gnupg.net --recv-keys $RVM_KEY && rvm get stable || echo "rvm update fail"
-#    before_script:
-#      - sudo nohup bash -c "xvfb :99 &"
-#      - $PYTHON tests/resources/httpserver/start.py &
-#    script:
-#      - coverage run --source=. -m nose tests -v $GENERAL_EXCLUDE $OSX_EXCLUDE --with-timer --timer-top-n 30
-
   - os: windows
     name: "Python3.7 on Windows"
     language: sh
@@ -55,19 +38,7 @@ matrix:
     - choco install python --version 3.7.6
     - $PYTHON --version
     - $PYTHON -m ensurepip
-    - $PIP_INSTALL --upgrade pip
-    - $PIP_INSTALL pip wheel --upgrade
-    - choco install nodejs.install
-#    install:
-#    - gem install rspec
-#    - $PIP_INSTALL pyyaml==3.13
-#    - $PIP_INSTALL -r requirements.txt
-#    - $PIP_INSTALL -r tests/ci/requirements.txt
-    before_script:
-    - ruby -v
-    - gem -v
-    - rspec --version
-    - nohup bash -c "$PYTHON tests/resources/httpserver/start.py ;"
+    - $PIP_INSTALL --upgrade pip wheel
     script:
     - $PYTHON -m nose --verbosity=3 tests.modules.jmeter.test_JMX:TestJMX.test_int_udv
 
@@ -88,10 +59,6 @@ install:
 - $PIP_INSTALL pyyaml==3.13
 - $PIP_INSTALL -r requirements.txt
 - $PIP_INSTALL -r tests/ci/requirements.txt
-
-#before_script:
-#- nohup bash -c "Xvfb :99 &"
-#- $PYTHON tests/resources/httpserver/start.py &
 
 script:
 - coverage run --source=. -m nose tests -v $GENERAL_EXCLUDE --with-timer --timer-top-n 30
