--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,6 @@ branches:
 os: linux
 
 python:
-#- "3.5"
-#- "3.6"
 - "3.7"
 
 env:
@@ -40,7 +38,7 @@ matrix:
     - $PYTHON -m ensurepip
     - $PIP_INSTALL --upgrade pip wheel
     script:
-    - $PYTHON -m nose --verbosity=3 tests.modules.jmeter.test_JMX:TestJMX.test_int_udv
+    - $PYTHON -m nose --verbosity=3 tests.modules.jmeter
 
 addons:
   firefox: latest
@@ -55,15 +53,9 @@ before_install:
 - mono --version
 
 install:
-- gem install rspec
 - $PIP_INSTALL pyyaml==3.13
 - $PIP_INSTALL -r requirements.txt
 - $PIP_INSTALL -r tests/ci/requirements.txt
 
 script:
 - coverage run --source=. -m nose tests -v $GENERAL_EXCLUDE --with-timer --timer-top-n 30
-
-after_success:
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then coverage report -m && codecov; fi
-
-
