--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ branches:
 os: linux
 
 python:
+#- "3.5"
+#- "3.6"
 - "3.7"
 
 env:
@@ -21,6 +23,23 @@ env:
 
 matrix:
   include:
+#  - os: osx
+#    name: "Python3.7 on macOS"
+#    osx_image: xcode11    # Python 3.7.4 running on macOS 10.14.4
+#    language: shell
+#    env:
+#    - PYTHON=python3
+#    - PIP_INSTALL="sudo pip3 install"
+#    - RVM_KEY="409B6B1796C275462A1703113804BB82D39DC0E3"
+#    - OSX_EXCLUDE="--exclude-test=tests.modules.selenium.test_csharp"
+#    before_install:
+#    - gpg --keyserver hkp://keys.gnupg.net --recv-keys $RVM_KEY && rvm get stable || echo "rvm update fail"
+#    before_script:
+#      - sudo nohup bash -c "xvfb :99 &"
+#      - $PYTHON tests/resources/httpserver/start.py &
+#    script:
+#      - coverage run --source=. -m nose tests -v $GENERAL_EXCLUDE $OSX_EXCLUDE --with-timer --timer-top-n 30
+
   - os: windows
     name: "Python3.7 on Windows"
     language: sh
@@ -36,9 +55,21 @@ matrix:
     - choco install python --version 3.7.6
     - $PYTHON --version
     - $PYTHON -m ensurepip
-    - $PIP_INSTALL --upgrade pip wheel
+    - $PIP_INSTALL --upgrade pip
+    - $PIP_INSTALL pip wheel --upgrade
+    - choco install nodejs.install
+#    install:
+#    - gem install rspec
+#    - $PIP_INSTALL pyyaml==3.13
+#    - $PIP_INSTALL -r requirements.txt
+#    - $PIP_INSTALL -r tests/ci/requirements.txt
+    before_script:
+    - ruby -v
+    - gem -v
+    - rspec --version
+    #- nohup bash -c "$PYTHON tests/resources/httpserver/start.py ;"
     script:
-    - $PYTHON -m nose -v tests # -v --exclude-dir=tests/resources --exclude-dir=tests/ci -with-coverage --cover-inclusive
+    - $PYTHON -m nose tests -v --exclude-dir=tests/resources --exclude-dir=tests/ci -with-coverage --cover-inclusive
 
 addons:
   firefox: latest
@@ -53,9 +84,17 @@ before_install:
 - mono --version
 
 install:
+- gem install rspec
 - $PIP_INSTALL pyyaml==3.13
 - $PIP_INSTALL -r requirements.txt
 - $PIP_INSTALL -r tests/ci/requirements.txt
 
+#before_script:
+#- nohup bash -c "Xvfb :99 &"
+#- $PYTHON tests/resources/httpserver/start.py &
+
 script:
 - coverage run --source=. -m nose tests -v $GENERAL_EXCLUDE --with-timer --timer-top-n 30
+
+after_success:
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then coverage report -m && codecov; fi
