--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ matrix:
     - ruby -v
     - gem -v
     - rspec --version
-    - pwsh -C 'python tests/resources/httpserver/start.py &'
+    #- pwsh -C 'python tests/resources/httpserver/start.py &'
     script:
     - $PYTHON -m nose tests -v #--exclude-dir=tests/resources --exclude-dir=tests/ci -with-coverage --cover-inclusive
 
