--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ matrix:
     - rspec --version
     - powershell -C 'python tests/resources/httpserver/start.py &'
     script:
-    - $PYTHON -m nose tests -v #--exclude-dir=tests/resources --exclude-dir=tests/ci -with-coverage --cover-inclusive
+    - $PYTHON -m nose tests -v --exclude-dir=tests/resources --exclude-dir=tests/ci #-with-coverage --cover-inclusive
 
 addons:
   firefox: latest
