--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,4 +31,4 @@ before_test:
   - ps: Start-Process $env:PYTHON\\python.exe tests/resources/httpserver/start.py
 
 test_script:
-  - "%PYTHON%\\python.exe -m nose tests -v --exclude-dir=tests/resources --exclude-dir=tests/ci"
+  - "%PYTHON%\\python.exe -m nose tests/modules/selenium/test_selenium_executor.py -v --exclude-dir=tests/resources --exclude-dir=tests/ci"
