--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 image:
-  - Visual Studio 2019
+  - Previous Visual Studio 2019
 
 # Do not build feature branch with open Pull Requests
 skip_branch_with_pr: true
